--- a/styles/scss/utils/_variables.scss
+++ b/styles/scss/utils/_variables.scss
@@ -29,6 +29,8 @@ $text--font : 'Roboto', 'Arial', sans-serif;
 // Variables de tailles de police relatives aux écrans
 
 $base--font-size : 18px;
+$large--font-size : 28px;
+$x-large--font-size : 40px;
 
 // Variables de tailles de police
 
