--- a/styles/scss/base/_base.scss
+++ b/styles/scss/base/_base.scss
@@ -21,4 +21,12 @@ body {
     font-family: $text--font;
     font-weight: normal; 
     font-size: $base--font-size;
+
+    @include large-desktop-and-more {
+        font-size: $large--font-size;
+    }
+
+    @include x-large-desktop-and-more {
+        font-size: $x-large--font-size;
+    }
 }
