--- a/styles/scss/base/_typography.scss
+++ b/styles/scss/base/_typography.scss
@@ -28,7 +28,7 @@
     src: url('../../../medias/fonts/Roboto/roboto-regular.woff2') format('woff2'),
          url('../../../medias/fonts/Roboto/roboto-regular.woff') format('woff'),
          url('../../../medias/fonts/Roboto/roboto-regular.ttf') format('ttf');
-    font-weight: lighter;
+    font-weight: 300;
     font-style: normal;
 }
 
